<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".DetalleJugador">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">



        <!--FOTO DE PERFIL-->
        <ImageView
            android:id="@+id/ImagenDetalle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />


        <!--NOMBRES-->
        <TextView
            android:id="@+id/INFORMACIONDETALLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/INFORMACIONDETALLE"
            android:textColor="#088A4B"
            android:textSize="25sp" />

        <!--NOMBRES-->
        <TextView
            android:id="@+id/NombresDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/NombresDetalle"
            android:textColor="#0489B1"
            android:textSize="25sp" />

        <!--PUNTAJE-->
        <TextView
            android:id="@+id/PuntajeDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="#FF8000"
            android:text="@string/PuntajeDetalle" />

        <!--CORREO-->
        <TextView
            android:id="@+id/CorreoDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:text="@string/CorreoDetalle" />


        <!--EDAD-->
        <TextView
            android:id="@+id/EdadDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:text="@string/EdadDetalle" />

        <!--PAIS-->
        <TextView
            android:id="@+id/PaisDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            android:text="@string/PaisDetalle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>