<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <!--IMAGEN-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/soldado"
            android:layout_marginTop="5dp"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <!--CORREO ELECTRÓNICO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/correoEt"
                android:hint="@string/correoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--CONTRASEÑA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/passEt"
                android:hint="@string/passEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--NOMBRE-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nombreEt"
                android:hint="@string/nombreEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--EDAD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edadEt"
                android:hint="@string/edadEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--PAIS-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/paisEt"
                android:hint="@string/paisEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--FECHA ACTUAL-->
        <TextView
            android:id="@+id/fechaTxt"
            android:text="@string/fechaTxt"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--REGISTRO DEL JUGADOR-->
        <Button
            android:id="@+id/Registrar"
            android:text="@string/Registrar"
            android:layout_marginTop="10dp"
            android:background="#086A87"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>